--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "html-loader": "^2.1.2",
     "path-browserify": "^1.0.1",
+    "sass-loader": "^11.0.1",
     "webpack-cli": "^4.5.0"
   }
 }
