--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 public/css
 package-lock.json
 node_modules
-functions/styles
-scss/utility
-scss/dashboard.scss
-scss/dropdown.scss
-scss/__mixin.scss
+olders
