--- a/package.json
+++ b/package.json
@@ -1,22 +1,12 @@
 {
-  "name": "blog",
+  "name": "@wadahkode/blog",
   "version": "0.0.1",
-  "description": "",
-  "main": "webpack.common.js",
+  "description": "My Blogger",
+  "main": "./index.js",
   "scripts": {
-    "start": "webpack --watch --config webpack.dev.js",
-    "watch:css": "sass --watch ./styles.scss:public/css/blog.css",
-    "build:css": "sass ./styles.scss:public/css/blog.css",
+    "start": "node ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
   "author": "wadahkode <mvp.dedefilaras@gmail.com>",
-  "license": "MIT",
-  "devDependencies": {
-    "clean-webpack-plugin": "^3.0.0",
-    "html-loader": "^2.1.2",
-    "path-browserify": "^1.0.1",
-    "sass-loader": "^11.0.1",
-    "webpack-cli": "^4.5.0"
-  }
+  "license": "MIT"
 }
