--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./index.js",
   "scripts": {
     "start": "node ./index.js",
+    "live": "nodemon ./index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "wadahkode <mvp.dedefilaras@gmail.com>",
